crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_seen_group_member_diff_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 11 files · 13 hunks  standalone  [Accept All]                         watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │s/b.rs  A  +1 −0  [seen]               [A accept file] [U restore file]│"
"│  feat-x · 8 files        │@@ -0,0 +1 @@                           [a accept] [u restore] [m flag]│"
"│  M f1  +1 −1             │+fn run_1() {}                                                         │"
"│  M f2  +1 −0             │                                                                       │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│  [seen] 5 files          │                                                                       │"
"│    A a.rs  +1 −0  [seen] │                                                                       │"
"│    A b.rs  +1 −0  [seen] │                                                                       │"
"│    A c.rs  +1 −0  [seen] │                                                                       │"
"│    A d.rs  +1 −0  [seen] │                                                                       │"
"│    A e.rs  +1 −0  [seen] │                                                                       │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  e collapse  A accept file  t hide empty  ? help  q quit "
