crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_seen_group_member_diff_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..39 Reset Reset BOLD
0 41..51 Reset Reset DIM
1 27..100 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..34 Reset Reset BOLD
2 39..41 Green Reset -
2 42..44 Red Reset -
2 44..52 Reset Reset DIM
2 67..99 Reset Reset DIM
2 99..100 Cyan Reset -
3 27..28 Cyan Reset -
3 28..99 Reset Reset REVERSED
3 99..100 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
4 28..42 Green Reset -
4 99..100 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
5 99..100 Cyan Reset -
6 15..18 Green Reset -
6 19..21 Red Reset -
6 27..28 Cyan Reset -
6 99..100 Cyan Reset -
7 27..28 Cyan Reset -
7 99..100 Cyan Reset -
8 13..15 Green Reset -
8 16..18 Red Reset -
8 18..26 Reset Reset DIM
8 27..28 Cyan Reset -
8 99..100 Cyan Reset -
9 1..13 Reset Reset REVERSED
9 13..15 Green Reset REVERSED
9 15..16 Reset Reset REVERSED
9 16..18 Red Reset REVERSED
9 18..26 Reset Reset DIM|REVERSED
9 26..27 Reset Reset REVERSED
9 27..28 Cyan Reset -
9 99..100 Cyan Reset -
10 13..15 Green Reset -
10 16..18 Red Reset -
10 18..26 Reset Reset DIM
10 27..28 Cyan Reset -
10 99..100 Cyan Reset -
11 13..15 Green Reset -
11 16..18 Red Reset -
11 18..26 Reset Reset DIM
11 27..28 Cyan Reset -
11 99..100 Cyan Reset -
12 13..15 Green Reset -
12 16..18 Red Reset -
12 18..26 Reset Reset DIM
12 27..28 Cyan Reset -
12 99..100 Cyan Reset -
13 1..27 Reset Reset DIM
13 27..28 Cyan Reset -
13 99..100 Cyan Reset -
14 1..5 Reset Reset BOLD
14 27..28 Cyan Reset -
14 99..100 Cyan Reset -
15 27..28 Cyan Reset -
15 99..100 Cyan Reset -
16 9..11 Green Reset -
16 12..14 Red Reset -
16 14..26 Reset Reset DIM
16 27..28 Cyan Reset -
16 99..100 Cyan Reset -
17 9..11 Green Reset -
17 12..14 Red Reset -
17 14..23 Reset Reset DIM
17 27..28 Cyan Reset -
17 99..100 Cyan Reset -
18 27..28 Cyan Reset -
18 99..100 Cyan Reset -
19 1..27 Reset Reset DIM
19 27..28 Cyan Reset -
19 99..100 Cyan Reset -
20 1..8 Reset Reset BOLD
20 27..28 Cyan Reset -
20 99..100 Cyan Reset -
21 27..28 Cyan Reset -
21 99..100 Cyan Reset -
22 12..14 Green Reset -
22 15..17 Red Reset -
22 27..28 Cyan Reset -
22 99..100 Cyan Reset -
23 27..28 Cyan Reset -
23 99..100 Cyan Reset -
24 27..28 Cyan Reset -
24 99..100 Cyan Reset -
25 27..28 Cyan Reset -
25 99..100 Cyan Reset -
26 27..28 Cyan Reset -
26 99..100 Cyan Reset -
27 27..28 Cyan Reset -
27 99..100 Cyan Reset -
28 27..100 Cyan Reset -
29 0..99 Reset Reset DIM
