crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_seen_group_open_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..39 Reset Reset BOLD
0 41..51 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..35 Reset Reset BOLD
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
3 38..43 Reset Reset DIM
4 0..1 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
4 38..43 Reset Reset DIM
5 0..1 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
5 38..43 Reset Reset DIM
6 0..1 Cyan Reset -
6 15..18 Green Reset -
6 19..21 Red Reset -
6 27..28 Cyan Reset -
6 38..43 Reset Reset DIM
7 0..1 Cyan Reset -
7 1..27 Reset Reset REVERSED
7 27..28 Cyan Reset -
7 38..43 Reset Reset DIM
8 0..1 Cyan Reset -
8 13..15 Green Reset -
8 16..18 Red Reset -
8 18..26 Reset Reset DIM
8 27..28 Cyan Reset -
9 0..1 Cyan Reset -
9 13..15 Green Reset -
9 16..18 Red Reset -
9 18..26 Reset Reset DIM
9 27..28 Cyan Reset -
10 0..1 Cyan Reset -
10 13..15 Green Reset -
10 16..18 Red Reset -
10 18..26 Reset Reset DIM
10 27..28 Cyan Reset -
11 0..1 Cyan Reset -
11 13..15 Green Reset -
11 16..18 Red Reset -
11 18..26 Reset Reset DIM
11 27..28 Cyan Reset -
12 0..1 Cyan Reset -
12 13..15 Green Reset -
12 16..18 Red Reset -
12 18..26 Reset Reset DIM
12 27..28 Cyan Reset -
13 0..1 Cyan Reset -
13 1..27 Reset Reset DIM
13 27..28 Cyan Reset -
14 0..1 Cyan Reset -
14 1..5 Reset Reset BOLD
14 27..28 Cyan Reset -
15 0..1 Cyan Reset -
15 27..28 Cyan Reset -
16 0..1 Cyan Reset -
16 9..11 Green Reset -
16 12..14 Red Reset -
16 14..26 Reset Reset DIM
16 27..28 Cyan Reset -
17 0..1 Cyan Reset -
17 9..11 Green Reset -
17 12..14 Red Reset -
17 14..23 Reset Reset DIM
17 27..28 Cyan Reset -
18 0..1 Cyan Reset -
18 27..28 Cyan Reset -
19 0..1 Cyan Reset -
19 1..27 Reset Reset DIM
19 27..28 Cyan Reset -
20 0..1 Cyan Reset -
20 1..8 Reset Reset BOLD
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 27..28 Cyan Reset -
22 0..1 Cyan Reset -
22 12..14 Green Reset -
22 15..17 Red Reset -
22 27..28 Cyan Reset -
23 0..1 Cyan Reset -
23 27..28 Cyan Reset -
24 0..1 Cyan Reset -
24 27..28 Cyan Reset -
25 0..1 Cyan Reset -
25 27..28 Cyan Reset -
26 0..1 Cyan Reset -
26 27..28 Cyan Reset -
27 0..1 Cyan Reset -
27 27..28 Cyan Reset -
28 0..28 Cyan Reset -
29 0..90 Reset Reset DIM
