crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_snooze_modal_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │beta  main · 2 files                                                   │"
"│  main · 3 files          │~/W/beta                                                               │"
"│  M f1  +1 −1             │  A u1  +1 −0  [upstream]                                              │"
"│  M f2  +1 −0             │  A u2  +2 −0  [mixed]                                                 │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │  ┌ snooze ─────────────────────────────┐                              │"
"│──────────────────────────│  │ snooze beta for [14▌] day(s)        │                              │"
"│W/notes                   │  │                                     │                              │"
"│  draft · 1 file          │  │ digits edit   ⏎ snooze   Esc cancel │                              │"
"│  M n2.md  +2 −0          │  └─────────────────────────────────────┘                              │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  A accept all in beta  ^A accept all  s snooze  t hide empty  ? help  q quit      "
